--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,12 @@
         <meta property="og:site_name" content="gartbin" />
         <meta property="og:locale" content="en_US" />
 
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:img:src" content="https://bin.gart.sh/api/{{id}}/thumbnail" />
+        <meta name="twitter:img:alt" content="gartbin" />
+        <meta name="twitter:image:width" content="1100" />
+        <meta name="twitter:image:height" content="340" />
+
   </head>
 
   <!-- 
