--- a/client/index.html
+++ b/client/index.html
@@ -159,7 +159,7 @@
           .then((json) => {
 
             const unescaped = unescapeHtml(json.content);
-            const fixedNewlines = unescaped.replace(/\\r\\n/g, "<br/>");
+            const fixedNewlines = unescaped.replace(/\\n/g, "<br/>");
 
             textarea.value = fixedNewlines
             highlight.textContent = fixedNewlines
