--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
         <meta name="twitter:image:width" content="1100" />
         <meta name="twitter:image:height" content="340" />
 
+        <link rel="icon" href="/favicon" />
+
   </head>
 
   <!-- 
