--- a/client/password.html
+++ b/client/password.html
@@ -10,6 +10,9 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+
+    <link rel="icon" href="/favicon" />
+
     <title>gartbin</title>
   </head>
 
