--- a/client/index.html
+++ b/client/index.html
@@ -20,10 +20,10 @@
 
         <button id="save">Save</button>
         <button id="copy">Copy</button>
-        <button id="clone">Clone</button>
         <button id="new">New</button>
-        <button id="download">Download</button>
-        <button id="raw">View Raw</button>
+        <button id="clone" hidden>Clone</button>
+        <button id="download" hidden>Download</button>
+        <button id="raw" hidden>View Raw</button>
       </div>
       <div class="toolbar-right">
         <a id="status" class="status">New bin - Unsaved</a>
