add favicon and meta tags

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./src/index.ts" type="module" defer></script>
     <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="icon" href="./assets/favicon.ico" />
+    <meta name="author" content="gartbin" />
+    <meta name="description" content="simple code sharing" />
+    <meta name="keywords" content="code, sharing, paste, bin, gartbin" />
     <title>gartbin</title>
   </head>
   <body>
