add save anon button

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
         <select id="lang" class="select"></select>
 
         <button id="save">Save</button>
+        <button id="save-anon">Save (anonymous)</button>
         <button id="copy">Copy</button>
         <button id="new">New</button>
         <button id="clone" hidden>Clone</button>
